// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Store 1`] = `
<div
  class="col-5"
>
  <form
    action=""
    class="form-inline"
  >
    <div
      class="form-group mx-sm-3"
    >
      <input
        required=""
        type="text"
        value=""
      />
    </div>
    <input
      class="btn btn-primary btn-sm"
      type="submit"
      value="Add"
    />
  </form>
  <div
    class="py-3"
  >
    <button
      class="btn btn-warning btn-sm mr-3"
      data-test="clean"
      type="button"
    >
      Clean
    </button>
    <button
      class="btn btn-primary btn-sm"
      data-test="generate"
      type="button"
    >
      Generate
    </button>
  </div>
</div>
`;

exports[`Store 2`] = `
<div
  class="col-5"
>
  <form
    action=""
    class="form-inline"
  >
    <div
      class="form-group mx-sm-3"
    >
      <input
        required=""
        type="text"
        value=""
      />
    </div>
    <input
      class="btn btn-primary btn-sm"
      type="submit"
      value="Add"
    />
  </form>
  <div
    class="py-3"
  >
    <button
      class="btn btn-warning btn-sm mr-3"
      data-test="clean"
      type="button"
    >
      Clean
    </button>
    <button
      class="btn btn-primary btn-sm"
      data-test="generate"
      type="button"
    >
      Generate
    </button>
  </div>
  <div
    class="mt-3"
  >
    <ul
      class="list-group"
    >
      <li
        class="list-group-item d-flex"
      >
        <span
          class="mr-auto"
        >
          sentence for test
        </span>
        <button
          class="close"
          type="button"
        >
          <span>
            ×
          </span>
        </button>
      </li>
      <li
        class="list-group-item d-flex"
      >
        <span
          class="mr-auto"
        >
          sentence for test
        </span>
        <button
          class="close"
          type="button"
        >
          <span>
            ×
          </span>
        </button>
      </li>
      <li
        class="list-group-item d-flex"
      >
        <span
          class="mr-auto"
        >
          sentence for test
        </span>
        <button
          class="close"
          type="button"
        >
          <span>
            ×
          </span>
        </button>
      </li>
      <li
        class="list-group-item d-flex"
      >
        <span
          class="mr-auto"
        >
          sentence for test
        </span>
        <button
          class="close"
          type="button"
        >
          <span>
            ×
          </span>
        </button>
      </li>
      <li
        class="list-group-item d-flex"
      >
        <span
          class="mr-auto"
        >
          sentence for test
        </span>
        <button
          class="close"
          type="button"
        >
          <span>
            ×
          </span>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Store 3`] = `
<div
  class="col-5"
>
  <form
    action=""
    class="form-inline"
  >
    <div
      class="form-group mx-sm-3"
    >
      <input
        required=""
        type="text"
        value=""
      />
    </div>
    <input
      class="btn btn-primary btn-sm"
      type="submit"
      value="Add"
    />
  </form>
  <div
    class="py-3"
  >
    <button
      class="btn btn-warning btn-sm mr-3"
      data-test="clean"
      type="button"
    >
      Clean
    </button>
    <button
      class="btn btn-primary btn-sm"
      data-test="generate"
      type="button"
    >
      Generate
    </button>
  </div>
</div>
`;

exports[`Store 4`] = `
<div
  class="col-5"
>
  <form
    action=""
    class="form-inline"
  >
    <div
      class="form-group mx-sm-3"
    >
      <input
        required=""
        type="text"
        value=""
      />
    </div>
    <input
      class="btn btn-primary btn-sm"
      type="submit"
      value="Add"
    />
  </form>
  <div
    class="py-3"
  >
    <button
      class="btn btn-warning btn-sm mr-3"
      data-test="clean"
      type="button"
    >
      Clean
    </button>
    <button
      class="btn btn-primary btn-sm"
      data-test="generate"
      type="button"
    >
      Generate
    </button>
  </div>
</div>
`;

exports[`Store 5`] = `
<div
  class="col-5"
>
  <form
    action=""
    class="form-inline"
  >
    <div
      class="form-group mx-sm-3"
    >
      <input
        required=""
        type="text"
        value=""
      />
    </div>
    <input
      class="btn btn-primary btn-sm"
      type="submit"
      value="Add"
    />
  </form>
  <div
    class="py-3"
  >
    <button
      class="btn btn-warning btn-sm mr-3"
      data-test="clean"
      type="button"
    >
      Clean
    </button>
    <button
      class="btn btn-primary btn-sm"
      data-test="generate"
      type="button"
    >
      Generate
    </button>
  </div>
  <div
    class="mt-3"
  >
    <ul
      class="list-group"
    >
      <li
        class="list-group-item d-flex"
      >
        <span
          class="mr-auto"
        >
          sentence for test
        </span>
        <button
          class="close"
          type="button"
        >
          <span>
            ×
          </span>
        </button>
      </li>
      <li
        class="list-group-item d-flex"
      >
        <span
          class="mr-auto"
        >
          sentence for test
        </span>
        <button
          class="close"
          type="button"
        >
          <span>
            ×
          </span>
        </button>
      </li>
      <li
        class="list-group-item d-flex"
      >
        <span
          class="mr-auto"
        >
          sentence for test
        </span>
        <button
          class="close"
          type="button"
        >
          <span>
            ×
          </span>
        </button>
      </li>
      <li
        class="list-group-item d-flex"
      >
        <span
          class="mr-auto"
        >
          sentence for test
        </span>
        <button
          class="close"
          type="button"
        >
          <span>
            ×
          </span>
        </button>
      </li>
      <li
        class="list-group-item d-flex"
      >
        <span
          class="mr-auto"
        >
          sentence for test
        </span>
        <button
          class="close"
          type="button"
        >
          <span>
            ×
          </span>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Store 6`] = `
<div
  class="col-5"
>
  <form
    action=""
    class="form-inline"
  >
    <div
      class="form-group mx-sm-3"
    >
      <input
        required=""
        type="text"
        value=""
      />
    </div>
    <input
      class="btn btn-primary btn-sm"
      type="submit"
      value="Add"
    />
  </form>
  <div
    class="py-3"
  >
    <button
      class="btn btn-warning btn-sm mr-3"
      data-test="clean"
      type="button"
    >
      Clean
    </button>
    <button
      class="btn btn-primary btn-sm"
      data-test="generate"
      type="button"
    >
      Generate
    </button>
  </div>
  <div
    class="mt-3"
  >
    <ul
      class="list-group"
    >
      <li
        class="list-group-item d-flex"
      >
        <span
          class="mr-auto"
        >
          sentence for test
        </span>
        <button
          class="close"
          type="button"
        >
          <span>
            ×
          </span>
        </button>
      </li>
      <li
        class="list-group-item d-flex"
      >
        <span
          class="mr-auto"
        >
          sentence for test
        </span>
        <button
          class="close"
          type="button"
        >
          <span>
            ×
          </span>
        </button>
      </li>
      <li
        class="list-group-item d-flex"
      >
        <span
          class="mr-auto"
        >
          sentence for test
        </span>
        <button
          class="close"
          type="button"
        >
          <span>
            ×
          </span>
        </button>
      </li>
      <li
        class="list-group-item d-flex"
      >
        <span
          class="mr-auto"
        >
          sentence for test
        </span>
        <button
          class="close"
          type="button"
        >
          <span>
            ×
          </span>
        </button>
      </li>
      <li
        class="list-group-item d-flex"
      >
        <span
          class="mr-auto"
        >
          sentence for test
        </span>
        <button
          class="close"
          type="button"
        >
          <span>
            ×
          </span>
        </button>
      </li>
    </ul>
  </div>
</div>
`;
